--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "lucatk",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "rpi-433": "^2.1.0"
   }
 }
