--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "lucatk",
   "license": "ISC",
   "dependencies": {
+    "alexa-app": "^4.2.3",
     "express": "^4.16.4",
     "rpi-433": "^2.1.0"
   }
